--- a/firmware/rusefi_config.ini
+++ b/firmware/rusefi_config.ini
@@ -7,6 +7,17 @@
 ! each field is declared as
 ! type;name;comment
 
+
+struct cranking_parameters_s
+
+end_struct
+
+
+
+
+
+
+
 engine_type_e;engineType;http://rusefi.com/wiki/index.php?title=Manual:Engine_Type
 
 int;headerMagicValue;this magic number is used to make sure that what we read from Flash is in fact some configuration
