--- a/trunk/firmware/tunerstudio/rusefi.ini
+++ b/trunk/firmware/tunerstudio/rusefi.ini
@@ -465,7 +465,7 @@ fileVersion = { 20150112 }
       firmwareTsVersion = scalar,U32,     84, "version",           1,         0
       egt0            = scalar,  S16,     88, "°C",           1,         0
       egt1            = scalar,  S16,     90, "°C",           1,         0
-      rpmAcceleration = scalar,  F32,     104, "dRpm, 1, 0
+      rpmAcceleration = scalar,  F32,    104, "dRpm",         1,         0
       egoCorrection   = { 1 }     
       time            = { timeNow }
       engineLoad      = { fuelAlgorithm == 0 ? MAF : TPS }
