--- a/firmware/rusefi_config.ini
+++ b/firmware/rusefi_config.ini
@@ -9,12 +9,47 @@
 
 
 struct cranking_parameters_s
+float;baseCrankingFuel;
+int16_t;crankingRpm;This value controls what RPM values we consider 'cranking' (any RPM below 'crankingRpm')\nAnything above 'crankingRpm' would be 'running'
+end_struct
+
+
+struct air_pressure_sensor_config_s
+          float;customValueAt0;kPa value at zero volts
+float;customValueAt5;kPa value at 5 volts
+air_pressure_sensor_type_e;sensorType;
+adc_channel_e;hwChannel
+end_struct
+
+
+#define MAP_ANGLE_SIZE 8
+#define MAP_WINDOW_SIZE 8
+
+struct MAP_sensor_config_s
+array float MAP_ANGLE_SIZE;samplingAngleBins
+array float MAP_ANGLE_SIZE;samplingAngle;@brief MAP averaging sampling start angle, by RPM
+end_struct
+
+struct ThermistorConf @brief Thermistor curve parameters
+float;tempC_1;these values are in Celcuus
+float;tempC_2
+float;tempC_3
+float;resistance_1
+float;resistance_2
+float;resistance_3
+
+	float;bias_resistor;
+
+	float;s_h_a;
+	float;s_h_b;
+	float;s_h_c;
+
 
 end_struct
 
 
 
-
+struct engine_configuration_s
 
 
 
@@ -50,3 +85,9 @@ int16_t;tpsErrorHighValue
 
 float;primingSquirtDurationMs
 int;engineCycle;360 for two-stroke\n720 for four-stroke
+
+cranking_parameters_s;crankingSettings
+MAP_sensor_config_s;map;@see hasMapSensor\n@see isMapAveragingEnabled
+
+
+end_struct
