--- a/trunk/firmware/rusefi_config.ini
+++ b/trunk/firmware/rusefi_config.ini
@@ -55,7 +55,7 @@ end_struct
 struct engine_configuration_s
 
 
-
+bits engine_type_e S32   [0:2], "AUDI_AAN", "DODGE_NEON_1995", "FORD_ASPIRE_1996", "FORD_FIESTA", "NISSAN_PRIMERA", "HONDA_ACCORD", "FORD_INLINE_6_1995", "GY6_139QMB"
 engine_type_e engineType;http://rusefi.com/wiki/index.php?title=Manual:Engine_Type
 
 int headerMagicValue;this magic number is used to make sure that what we read from Flash is in fact some configuration
@@ -67,21 +67,22 @@ int headerMagicValue;this magic number is used to make sure that what we read fr
 #define   IGN_LOAD_COUNT   16
 #define    IGN_RPM_COUNT			 16
 
-float[VBAT_INJECTOR_CURVE_SIZE] battInjectorLagCorrBins;
-float[VBAT_INJECTOR_CURVE_SIZE] battInjectorLagCorr;
+float[VBAT_INJECTOR_CURVE_SIZE] battInjectorLagCorrBins;;"V",        1,     0,      0.0,    20.0,   2
+float[VBAT_INJECTOR_CURVE_SIZE] battInjectorLagCorr;;"ms/V",     1,     0,      0.0,    50.0,   2
 
-float[CLT_CURVE_SIZE] cltFuelCorrBins;
-float[CLT_CURVE_SIZE] cltFuelCorr;
+float[CLT_CURVE_SIZE] cltFuelCorrBins;;"C",        1,     0,   -100.0,    250.0,  2
+float[CLT_CURVE_SIZE] cltFuelCorr;;"%",      100,     0,      0.0,    500.0,   2
 
-float[IAT_CURVE_SIZE] iatFuelCorrBins;
-float[IAT_CURVE_SIZE] iatFuelCorr;
+float[IAT_CURVE_SIZE] iatFuelCorrBins;;"C",        1,     0,   -100.0,    250.0,   2
+float[IAT_CURVE_SIZE] iatFuelCorr;;"%",      100,     0,      0.0,    500.0,   2
 
 int16_t directSelfStimulation;Should the trigger emulator push data right into trigger input, eliminating the need for physical jumper wires?\nPS: Funny name, right? :)\ntodo: make this a bit on some bit field
 
-int16_t tpsMin;todo: extract these two fields into a structure\ntodo: we need two sets of TPS parameters - modern ETBs have to sensors
-int16_t tpsMax;tpsMax value as 10 bit ADC value. Not Voltage!
+int16_t tpsMin;todo: extract these two fields into a structure\ntodo: we need two sets of TPS parameters - modern ETBs have to sensors;"ADC",      1,     0,    0, 1023,      0
+int16_t tpsMax;tpsMax value as 10 bit ADC value. Not Voltage!;"ADC",      1,     0,    0, 1023,      0
 
-int16_t analogChartMode;
+bits analog_chart_e S16         [0:1], "none", "trigger", "MAP", "INVALID"		
+analog_chart_e analogChartMode;
 
 int16_t tpsErrorLowValue;todo: finish implementation. These values are used for TPS disconnect detection
 int16_t tpsErrorHighValue
