--- a/trunk/firmware/tunerstudio/rusefi.ini
+++ b/trunk/firmware/tunerstudio/rusefi.ini
@@ -52,7 +52,6 @@ enable2ndByteCanID = false
 		
 	tpsMin                  = scalar,  S16,    330,        "ADC",      1,     0,    0, 1023,      0 ; * (  2 bytes)
    	tpsMax                  = scalar,  S16,    332,        "ADC",      1,     0,    0, 1023,      0 ; * (  2 bytes)		
-	analogChartMode         = bits,    S16,    334,         [0:1], "none", "trigger", "MAP", "INVALID"		
     
 	tpsErrorLowValue        = scalar,  U16,    336,        "°C",       1,     0,    -40, 200,     1;     size 4
 	tpsErrorHighValue       = scalar,  U16,    338,        "°C",       1,     0,    -40, 200,     1;     size 4
@@ -351,6 +350,11 @@ enable2ndByteCanID = false
 	fsio_setting13          = scalar,  F32,   6180, 		"Val",	   1,	   0,       0, 18000,	  0 ; size 4
 	fsio_setting14          = scalar,  F32,   6184, 		"Val",	   1,	   0,       0, 18000,	  0 ; size 4
 	fsio_setting15          = scalar,  F32,   6188, 		"Val",	   1,	   0,       0, 18000,	  0 ; size 4
+
+; hip9011Gain 6228
+; joystickDPin 6248
+
+	analogChartMode         = bits,    S32,   6252,         [0:1], "none", "trigger", "MAP", "INVALID"		
 
 	useConstantDwellDuringCranking= bits,    U32,   6280, [3:3], "false", "true"
 	isCanEnabled            = bits,    U32,   6280, [5:5], "false", "true"
