--- a/trunk/firmware/rusefi_config.ini
+++ b/trunk/firmware/rusefi_config.ini
@@ -8,6 +8,11 @@
 ! type name;comment
 
 
+! all the sub-structures are going to be nested withint the primary structure, that's
+! needed to get a proper TunerStudio file
+struct engine_configuration_s
+
+
 struct cranking_parameters_s
 float baseCrankingFuel;
 int16_t crankingRpm;This value controls what RPM values we consider 'cranking' (any RPM below 'crankingRpm')\nAnything above 'crankingRpm' would be 'running'
@@ -52,7 +57,6 @@ end_struct
 
 
 
-struct engine_configuration_s
 
 
 bits engine_type_e S32   [0:2], "AUDI_AAN", "DODGE_NEON_1995", "FORD_ASPIRE_1996", "FORD_FIESTA", "NISSAN_PRIMERA", "HONDA_ACCORD", "FORD_INLINE_6_1995", "GY6_139QMB"
@@ -81,8 +85,8 @@ int16_t directSelfStimulation;Should the trigger emulator push data right into t
 int16_t tpsMin;todo: extract these two fields into a structure\ntodo: we need two sets of TPS parameters - modern ETBs have to sensors;"ADC",      1,     0,    0, 1023,      0
 int16_t tpsMax;tpsMax value as 10 bit ADC value. Not Voltage!;"ADC",      1,     0,    0, 1023,      0
 
-bits analog_chart_e S16         [0:1], "none", "trigger", "MAP", "INVALID"		
-analog_chart_e analogChartMode;
+uint16_t unused334;
+
 
 int16_t tpsErrorLowValue;todo: finish implementation. These values are used for TPS disconnect detection
 int16_t tpsErrorHighValue
@@ -95,7 +99,7 @@ MAP_sensor_config_s map;@see hasMapSensor\n@see isMapAveragingEnabled
 
 
 ThermistorConf cltThermistorConf;todo: merge with channel settings, use full-scale Thermistor here!
-               ThermistorConf iatThermistorConf;
+ThermistorConf iatThermistorConf;
 
 #define DWELL_COUNT 8
 
@@ -117,5 +121,16 @@ float ignitionBaseAngle;this value could be used to offset the whole ignition ti
 float crankingChargeAngle;While cranking (which causes battery voltage to drop) we can calculate dwell time in shaft\ndegrees, not in absolute time as in running mode.
 
 timing_mode_e timingMode;
+
+
+
+
+
+
+
+
+
+bits analog_chart_e S32         [0:1], "none", "trigger", "MAP", "INVALID"		
+analog_chart_e analogChartMode;
 
 end_struct
