--- a/firmware/tunerstudio/rusefi.ini
+++ b/firmware/tunerstudio/rusefi.ini
@@ -38,9 +38,10 @@ enable2ndByteCanID = false
    ;  name           		= array,  type, offset,  shape, units,     scale, translate,    lo,      hi, digits
    ;  name       			= scalar, type, offset,         units,     scale, translate,    lo,      hi, digits
 ;AUTO_GENERATED_SECTION_START
-	engineType              = bits,    U32,    0, [0:2], "AUDI_AAN", "DODGE_NEON_1995", "FORD_ASPIRE_1996", "FORD_FIESTA", "NISSAN_PRIMERA", "HONDA_ACCORD", "FORD_INLINE_6_1995", "GY6_139QMB"
-	battInjectorLagCorrBins	= array,   F32,    8,   [8],   "V",        1,     0,      0.0,    20.0,   2; size 32
-	battInjectorLagCorr	    = array,   F32,    40,  [8],   "ms/V",     1,     0,      0.0,    50.0,   2; size 32
+	engineType						= bits,	S32,	0,	[0:2], "AUDI_AAN", "DODGE_NEON_1995", "FORD_ASPIRE_1996", "FORD_FIESTA", "NISSAN_PRIMERA", "HONDA_ACCORD", "FORD_INLINE_6_1995", "GY6_139QMB"
+;skipping headerMagicValue offset 4
+	battInjectorLagCorrBins			= array, F32,	8,	[8],	"V", 1, 0, 0.0, 20.0, 2
+	battInjectorLagCorr				= array, F32,	40,	[8],	"ms/V", 1, 0, 0.0, 50.0, 2
 
 	cltFuelCorrBins		    = array,   F32,    72,  [16],  "C",        1,     0,   -100.0,    250.0,  2; size 64
 	cltFuelCorr             = array,   F32,    136, [16],  "%",      100,     0,      0.0,    500.0,   2; size 64
