--- a/trunk/firmware/tunerstudio/rusefi.ini
+++ b/trunk/firmware/tunerstudio/rusefi.ini
@@ -42,17 +42,14 @@ enable2ndByteCanID = false
 ;skipping headerMagicValue offset 4
 	battInjectorLagCorrBins			= array, F32,	8,	[8],	"V", 1, 0, 0.0, 20.0, 2
 	battInjectorLagCorr				= array, F32,	40,	[8],	"ms/V", 1, 0, 0.0, 50.0, 2
-
-	cltFuelCorrBins		    = array,   F32,    72,  [16],  "C",        1,     0,   -100.0,    250.0,  2; size 64
-	cltFuelCorr             = array,   F32,    136, [16],  "%",      100,     0,      0.0,    500.0,   2; size 64
-
-	iatFuelCorrBins         = array,   F32,    200, [16],  "C",        1,     0,   -100.0,    250.0,   2; size 64
-	iatFuelCorr             = array,   F32,    264, [16],  "%",      100,     0,      0.0,    500.0,   2; size 64      
-	
-	; unused short 328
-		
-	tpsMin                  = scalar,  S16,    330,        "ADC",      1,     0,    0, 1023,      0 ; * (  2 bytes)
-   	tpsMax                  = scalar,  S16,    332,        "ADC",      1,     0,    0, 1023,      0 ; * (  2 bytes)		
+	cltFuelCorrBins					= array, F32,	72,	[16],	"C", 1, 0, -100.0, 250.0, 2
+	cltFuelCorr						= array, F32,	136,	[16],	"%", 100, 0, 0.0, 500.0, 2
+	iatFuelCorrBins					= array, F32,	200,	[16],	"C", 1, 0, -100.0, 250.0, 2
+	iatFuelCorr						= array, F32,	264,	[16],	"%", 100, 0, 0.0, 500.0, 2
+;skipping directSelfStimulation offset 328
+	tpsMin							= scalar, S16,	330,	"ADC", 1, 0, 0, 1023, 0
+	tpsMax							= scalar, S16,	332,	"ADC", 1, 0, 0, 1023, 0
+;skipping unused334 offset 334
     
 	tpsErrorLowValue        = scalar,  U16,    336,        "°C",       1,     0,    -40, 200,     1;     size 4
 	tpsErrorHighValue       = scalar,  U16,    338,        "°C",       1,     0,    -40, 200,     1;     size 4
