--- a/trunk/firmware/rusefi_config.ini
+++ b/trunk/firmware/rusefi_config.ini
@@ -88,11 +88,11 @@ int16_t tpsMax;tpsMax value as 10 bit ADC value. Not Voltage!;"ADC",      1,    
 uint16_t unused334;
 
 
-int16_t tpsErrorLowValue;todo: finish implementation. These values are used for TPS disconnect detection
-int16_t tpsErrorHighValue
+int16_t tpsErrorLowValue;todo: finish implementation. These values are used for TPS disconnect detection;"*C",       1,     0,    -40, 200,     1
+int16_t tpsErrorHighValue;;"*C",       1,     0,    -40, 200,     1
 
-float primingSquirtDurationMs
-int engineCycle;360 for two-stroke\n720 for four-stroke
+float primingSquirtDurationMs;;"*C",       1,     0,    -40, 200,     1
+int engineCycle;360 for two-stroke\n720 for four-stroke;"engine cycle",      1,      0,       0, 1000,      0
 
 cranking_parameters_s crankingSettings
 MAP_sensor_config_s map;@see hasMapSensor\n@see isMapAveragingEnabled
