--- a/trunk/firmware/tunerstudio/rusefi.ini
+++ b/trunk/firmware/tunerstudio/rusefi.ini
@@ -50,12 +50,12 @@ enable2ndByteCanID = false
 	tpsMin							= scalar, S16,	330,	"ADC", 1, 0, 0, 1023, 0
 	tpsMax							= scalar, S16,	332,	"ADC", 1, 0, 0, 1023, 0
 ;skipping unused334 offset 334
-    
-	tpsErrorLowValue        = scalar,  U16,    336,        "°C",       1,     0,    -40, 200,     1;     size 4
-	tpsErrorHighValue       = scalar,  U16,    338,        "°C",       1,     0,    -40, 200,     1;     size 4
-	primingSquirtDurationMs = scalar,  F32,    340,        "°C",       1,     0,    -40, 200,     1;     size 4
-    engineCycle             = scalar,  U32,    344,   "engine cycle",      1,      0,       0, 1000,      0 ; size 4
-	baseCrankingFuelPW      = scalar,  F32,    348,        "ms",       1,     0,    0, 200,     1;     size 4
+	tpsErrorLowValue				= scalar, S16,	336,	"*C", 1, 0, -40, 200, 1
+	tpsErrorHighValue				= scalar, S16,	338,	"*C", 1, 0, -40, 200, 1
+	primingSquirtDurationMs			= scalar, F32,	340,	"*C", 1, 0, -40, 200, 1
+	engineCycle						= scalar, S32,	344,	"engine cycle", 1, 0, 0, 1000, 0
+
+	baseCrankingFuelPW      = scalar,  F32,    348,        "ms",       1,     0,    0, 200,     1
 	crankingRpm             = scalar,  S16,    352,        "RPM",      1,     0,    0, 3000,      0 ; * (  2 bytes)
 	
 	mapSamplingAngleBins    = array,   F32,    356, [8],   "RPM",      1,     0,   0.0,    18000,   2; size 64
