--- a/trunk/firmware/tunerstudio/rusefi.ini
+++ b/trunk/firmware/tunerstudio/rusefi.ini
@@ -55,8 +55,8 @@ enable2ndByteCanID = false
 	primingSquirtDurationMs			= scalar, F32,	340,	"*C", 1, 0, -40, 200, 1
 	engineCycle						= scalar, S32,	344,	"engine cycle", 1, 0, 0, 1000, 0
 
-	baseCrankingFuelPW      = scalar,  F32,    348,        "ms",       1,     0,    0, 200,     1
-	crankingRpm             = scalar,  S16,    352,        "RPM",      1,     0,    0, 3000,      0 ; * (  2 bytes)
+	cranking_baseFuel      = scalar,  F32,    348,        "ms",       1,     0,    0, 200,     1
+	cranking_rpm            = scalar,  S16,    352,        "RPM",      1,     0,    0, 3000,      0 ; * (  2 bytes)
 	
 	mapSamplingAngleBins    = array,   F32,    356, [8],   "RPM",      1,     0,   0.0,    18000,   2; size 64
 	mapSamplingAngle        = array,   F32,    388, [8],   "deg",      1,     0,   0.0,    90,   2; size 64
@@ -1017,9 +1017,9 @@ fileVersion = { 20150112 }
 		
 ;			Tuning->Cranking
 	dialog = cranking, "Cranking"				
-		field = "Cranking RPM limit",                	crankingRpm
+		field = "Cranking RPM limit",                	cranking_rpm
 		field = ""
-		field = "Base cranking Pulse Width", 	baseCrankingFuelPW
+		field = "Base cranking Pulse Width", 	cranking_baseFuel
 		field = ""
 		field = "Charge Angle", 						crankingChargeAngle
 		field = "Advance during cranking", 				crankingTimingAngle
