--- a/trunk/firmware/rusefi_config.ini
+++ b/trunk/firmware/rusefi_config.ini
@@ -14,15 +14,15 @@ struct engine_configuration_s
 
 
 struct cranking_parameters_s
-float baseCrankingFuel;
-int16_t crankingRpm;This value controls what RPM values we consider 'cranking' (any RPM below 'crankingRpm')\nAnything above 'crankingRpm' would be 'running'
+float baseFuel;;"ms",       1,     0,    0, 200,     1
+int16_t rpm;This value controls what RPM values we consider 'cranking' (any RPM below 'crankingRpm')\nAnything above 'crankingRpm' would be 'running';"RPM",      1,     0,    0, 3000,      0
 end_struct
 
 
 struct air_pressure_sensor_config_s
-float customValueAt0;kPa value at zero volts
-float customValueAt5;kPa value at 5 volts
-air_pressure_sensor_type_e sensorType;
+float valueAt0;kPa value at zero volts;"kpa",      1,     0,    0, 450,     2
+float valueAt5;kPa value at 5 volts;"kpa",      1,     0,    0, 450,     2
+air_pressure_sensor_type_e type;
 adc_channel_e hwChannel;
 end_struct
 
@@ -31,10 +31,10 @@ end_struct
 #define MAP_WINDOW_SIZE 8
 
 struct MAP_sensor_config_s @brief MAP averaging configuration
-float[MAP_ANGLE_SIZE] samplingAngleBins
-float[MAP_ANGLE_SIZE] samplingAngle;@brief MAP averaging sampling start angle, by RPM
-float[MAP_WINDOW_SIZE] samplingWindowBins;
-float[MAP_WINDOW_SIZE] samplingWindow;@brief MAP averaging angle duration, by RPM
+float[MAP_ANGLE_SIZE] samplingAngleBins;;"RPM",      1,     0,   0.0,    18000,   2
+float[MAP_ANGLE_SIZE] samplingAngle;@brief MAP averaging sampling start angle, by RPM;"deg",      1,     0,   0.0,    90,   2
+float[MAP_WINDOW_SIZE] samplingWindowBins;;"RPM",      1,     0,   0.0,    18000,   2
+float[MAP_WINDOW_SIZE] samplingWindow;@brief MAP averaging angle duration, by RPM;"deg",      1,     0,   0.0,    90,   2
 air_pressure_sensor_config_s sensor
 end_struct
 
@@ -94,7 +94,7 @@ int16_t tpsErrorHighValue;;"*C",       1,     0,    -40, 200,     1
 float primingSquirtDurationMs;;"*C",       1,     0,    -40, 200,     1
 int engineCycle;360 for two-stroke\n720 for four-stroke;"engine cycle",      1,      0,       0, 1000,      0
 
-cranking_parameters_s crankingSettings
+cranking_parameters_s cranking
 MAP_sensor_config_s map;@see hasMapSensor\n@see isMapAveragingEnabled
 
 
